Fixed initial width issue on mobile and removed font-awesome
I forgot a meta tag tells the browser to match the browser window width to the width of the screen. For whatever reason the default is to make the browser window much bigger, make everything look zoomed out. Also didn't need font-awesome and it wasn't worth the hassle to leave it in due to the npmrc injected environment variable

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,3 +1,5 @@
+@import "~@Styles/_variables.scss";
+
 $nav-height: 55px;
 
 .navbar {
@@ -68,5 +70,15 @@ $nav-height: 55px;
 
     .site-navigation-link + .site-navigation-link {
         margin-left: 40px;
+    }
+
+    @media screen and (max-width: $phablet-breakpoint) {
+        .site-navigation-link + .site-navigation-link {
+            margin-left: 25px;
+        }
+        
+        .navbar-content {
+            padding: 15px 25px;
+        }
     }
 }
