--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,5 @@
 $base-fs: 1.125; // Base font size = 18px = 1.125 * 16px (default font size)
+$mobile-fs: 0.865;
 $ratio: 1.5; // Perfect fifth modular scale
 $line-height: 1.45;
 
